Fixing download resume button on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -248,6 +248,10 @@
     margin: 0 auto;
     padding: 20px;
   }
+
+  .lastAttempt{
+    cursor: pointer;
+  }
 }
 
 /* TABLET */
